tests/compile_fail/directx_disabled.zig
const rgfw = @import("rgfw");

test "DirectX configuration explains how to enable it" {
    rgfw.DirectX.requireEnabled();
}
